@@ -250,6 +250,7 @@
         //"ldap_field_email" "mail";
         //// This bit is needed if you want to put ircops into a group:
         //"ldap_oper_group_dn" "cn=Opers,ou=Groups,dc=afternet,dc=org";
+        //"ldap_oper_group_level" "99";  // must be above this level to be added to oper ldap group
         //"ldap_field_group_member" "memberUid"; // what field group members are in
         //"ldap_timeout" "10"; // seconds
 
